[gd_scene load_steps=6 format=3 uid="uid://cqow47bch5ocs"]

[ext_resource type="Script" uid="uid://cidkyo67efp8c" path="res://scenes/main.gd" id="1_sugp2"]
[ext_resource type="PackedScene" uid="uid://bur8obagsaj14" path="res://scenes/rooms/basic/basic_room.tscn" id="2_0wfyh"]
[ext_resource type="PackedScene" uid="uid://cr4arftaxn5q5" path="res://scenes/player/player.tscn" id="4_jyhfs"]
[ext_resource type="PackedScene" uid="uid://11ww35fhmmjf" path="res://scenes/side_panel/side_panel.tscn" id="5_tbgi4"]
[ext_resource type="PackedScene" uid="uid://e1eocgt0qebt" path="res://scenes/ShipInterior/ShipInterior.tscn" id="5_tefeu"]

[node name="Main" type="Node2D"]
script = ExtResource("1_sugp2")
room_scene = ExtResource("2_0wfyh")

[node name="Player" parent="." instance=ExtResource("4_jyhfs")]

[node name="RacksCanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="SidePanel" parent="RacksCanvasLayer" instance=ExtResource("5_tbgi4")]

[node name="ShipInterior" parent="." instance=ExtResource("5_tefeu")]
position = Vector2(15.378845, 16.334747)
